--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -4,9 +4,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:support-v4:+'
 
-    //ActionBar-PullToRefresh はバグが修正されていないので自前でcloneしたdevelopmentブランチを使用
-    //compile 'com.github.chrisbanes.actionbarpulltorefresh:extra-abc:+'
-    compile project(':actionbar-ptr-compat')
+    compile 'com.github.chrisbanes.actionbarpulltorefresh:extra-abc:+'
 
     compile 'org.twitter4j:twitter4j-core:4.+'
     compile 'org.twitter4j:twitter4j-async:4.+'
