--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="20"
-    android:versionName="0.109alpha (prototype 140618)" >
+    android:versionName="0.110alpha (prototype 140619)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -160,6 +160,9 @@
 
         <activity
             android:name=".activity.PreviewActivity"
+            android:theme="@style/AppThemeTranslucentBg"/>
+        <activity
+            android:name=".activity.MoviePreviewActivity"
             android:theme="@style/AppThemeTranslucentBg"/>
 
         <activity
