--- a/YukariProject/Yukari/build.gradle
+++ b/YukariProject/Yukari/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:support-v4:+'
 
+    compile 'com.jakewharton:butterknife:5.+'
     compile 'com.github.chrisbanes.actionbarpulltorefresh:extra-abc:+'
 
     compile 'org.twitter4j:twitter4j-core:4.+'
