--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.android.support:support-v4:19.+'
+    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.android.support:support-v4:21.+'
 
     compile 'com.jakewharton:butterknife:5.+'
 
@@ -15,12 +15,12 @@ dependencies {
 }
 
 android {
-    compileSdkVersion Integer.parseInt(COMPILE_SDK_VERSION)
+    compileSdkVersion COMPILE_SDK_VERSION
     buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion Integer.parseInt(TARGET_SDK_VERSION)
+        targetSdkVersion TARGET_SDK_VERSION
     }
 
     compileOptions {
