--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-COMPILE_SDK_VERSION=19
-BUILD_TOOLS_VERSION=19.1.0
-TARGET_SDK_VERSION=19
+COMPILE_SDK_VERSION=android-L
+BUILD_TOOLS_VERSION=20
+TARGET_SDK_VERSION=L
