--- a/YukariProject/Yukari/build.gradle
+++ b/YukariProject/Yukari/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     compile 'org.twitter4j:twitter4j-media-support:4.+'
     compile 'org.twitter4j:twitter4j-stream:4.+'
 
+    compile 'com.twitter:twitter-text:1.6.1'
+
     compile fileTree(dir: './libs', includes: ['*.jar'])
 }
 
