--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="21"
-    android:versionName="0.117alpha (prototype 140703)" >
+    android:versionName="0.118alpha (prototype 140704)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,6 +18,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:largeHeap="true">
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+
         <activity
             android:name="shibafu.yukari.activity.MainActivity"
             android:theme="@style/AppThemeNoTitle"
@@ -217,6 +220,7 @@
 
         <activity
             android:name=".activity.UserSearchActivity"
+            android:theme="@style/YukariSearchTheme"
             android:label="@string/title_activity_user_search"
             android:windowSoftInputMode="adjustResize"/>
     </application>
