--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -106,6 +106,16 @@
                     android:host="twitter.com"
                     android:scheme="https" />
             </intent-filter>
+            <intent-filter android:label="Open Tweet" android:icon="@drawable/ic_prof_tweets">
+                <action android:name="shibafu.yukari.ACTION_LINK_ACCEL"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data
+                    android:host="twitter.com"
+                    android:scheme="http" />
+                <data
+                    android:host="twitter.com"
+                    android:scheme="https" />
+            </intent-filter>
         </activity>
         <activity
             android:name="shibafu.yukari.activity.AssetExtractActivity"
