--- a/YukariProject/Yukari/build.gradle
+++ b/YukariProject/Yukari/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 
     compile 'com.twitter:twitter-text:1.6.1'
 
+    compile 'com.larswerkman:HoloColorPicker:1.4'
+
     compile fileTree(dir: './libs', includes: ['*.jar'])
 }
 
