--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="shibafu.yukari"
     android:installLocation="auto"
-    android:versionCode="28"
-    android:versionName="0.152alpha (prototype 140922)" >
+    android:versionCode="29"
+    android:versionName="0.153alpha (prototype 140927)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -234,6 +234,15 @@
         <activity
             android:name=".activity.MaintenanceActivity"
             android:label="Maintenance Mode" />
+
+        <activity
+            android:name=".activity.PictureChooserActivity"
+            android:label="@string/title_activity_picture_chooser"
+            android:uiOptions="splitActionBarWhenNarrow">
+            <meta-data
+                android:name="android.support.UI_OPTIONS"
+                android:value="splitActionBarWhenNarrow" />
+        </activity>
     </application>
 
 </manifest>
