--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -1,12 +1,12 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.android.support:support-v4:19.+'
-    compile 'com.google.android.gms:play-services:5.2.08'
+    compile 'com.android.support:appcompat-v7:20.0.0'
+    compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.google.android.gms:play-services:6.1.11'
 
-    compile 'com.google.code.gson:gson:2.+'
-    compile 'com.jakewharton:butterknife:5.+'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.jakewharton:butterknife:5.1.2'
 
     compile 'com.doomonafireball.betterpickers:library:1.5.2'
 
