--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -117,7 +117,8 @@
         </activity>
         <activity
             android:name="shibafu.yukari.activity.AssetExtractActivity"
-            android:label="@string/title_activity_assetextract">
+            android:label="@string/title_activity_assetextract"
+            android:configChanges="orientation|screenSize">
         </activity>
         <activity
             android:name="shibafu.yukari.activity.ProfileActivity"
