--- a/YukariProject/Yukari/src/main/AndroidManifest.xml
+++ b/YukariProject/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="33"
-    android:versionName="0.173alpha (prototype 141214)" >
+    android:versionName="0.174alpha (prototype 141215)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -192,6 +192,10 @@
         <activity
             android:name=".activity.MuteActivity"
             android:label="@string/title_activity_mute"/>
+
+        <activity
+            android:name=".activity.AutoMuteActivity"
+            android:label="@string/title_activity_auto_mute"/>
 
         <activity
             android:name=".activity.FontSelectorActivity"
