--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     compile fileTree(dir: './libs', includes: ['*.jar'])
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    testCompile 'junit:junit:4.12'
 }
 
 android {
