--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="52"
-    android:versionName="1.2.0.228α (rehearsal 150804)" >
+    android:versionName="1.2.0.229α (rehearsal 150819)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -352,6 +352,10 @@
         <activity
             android:name=".activity.TemplateEditActivity"
             android:label="@string/title_activity_template_edit"/>
+
+        <activity android:name=".activity.QueryEditorActivity"
+                  android:windowSoftInputMode="adjustResize"
+                  android:label="Query Editor"/>
    </application>
 
 </manifest>
