--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="56"
-    android:versionName="1.2.0.233α (rehearsal 150909)" >
+    android:versionName="1.2.0.234α (rehearsal 150915)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -55,7 +55,8 @@
             </intent-filter>
         </activity>
 
-        <service android:name="shibafu.yukari.service.TwitterService" />
+        <service android:name=".service.TwitterService" />
+        <service android:name=".service.AsyncCommandService"/>
         <service
             android:name=".service.CacheCleanerService"
             android:process=":cleaner"/>
