--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "org.twitter4j:twitter4j-stream:$t4j_version"
 
     compile 'com.twitter:twitter-text:1.6.1'
+    compile 'org.jsoup:jsoup:1.8.3'
 
     compile 'com.larswerkman:HoloColorPicker:1.4'
 
