--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -87,7 +87,7 @@ android {
 
 //-- Kotlin --
 buildscript {
-    ext.kotlin_version = '0.14.449'
+    ext.kotlin_version = '1.0.0-beta-1103'
     repositories {
         mavenCentral()
     }
