--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     compile 'com.twitter:twitter-text:1.6.1'
     compile 'org.jsoup:jsoup:1.8.3'
+    compile 'com.google.zxing:javase:3.2.1'
 
     compile 'com.larswerkman:HoloColorPicker:1.4'
 
